@@ -1,6 +1,6 @@
 /* StarPU --- Runtime system for heterogeneous multicore architectures.
  *
- * Copyright (C) 2008-2022  Université de Bordeaux, CNRS (LaBRI UMR 5800), Inria
+ * Copyright (C) 2008-2023  Université de Bordeaux, CNRS (LaBRI UMR 5800), Inria
  *
  * StarPU is free software; you can redistribute it and/or modify
  * it under the terms of the GNU Lesser General Public License as published by
@@ -60,7 +60,9 @@ struct starpu_data_interface_ops starpu_interface_bcsr_ops =
 	.name = "STARPU_BCSR_INTERFACE",
 	.pack_data = pack_data,
 	.peek_data = peek_data,
-	.unpack_data = unpack_data
+	.unpack_data = unpack_data,
+	.pack_meta = NULL,
+	.unpack_meta = NULL
 };
 
 static void *bcsr_to_pointer(void *data_interface, unsigned node)
