@@ -1,6 +1,6 @@
 /* StarPU --- Runtime system for heterogeneous multicore architectures.
  *
- * Copyright (C) 2008-2022  Université de Bordeaux, CNRS (LaBRI UMR 5800), Inria
+ * Copyright (C) 2008-2023  Université de Bordeaux, CNRS (LaBRI UMR 5800), Inria
  *
  * StarPU is free software; you can redistribute it and/or modify
  * it under the terms of the GNU Lesser General Public License as published by
@@ -74,7 +74,9 @@ struct starpu_data_interface_ops starpu_interface_matrix_ops =
 	.peek_data = peek_matrix_handle,
 	.unpack_data = unpack_matrix_handle,
 	.describe = describe,
-	.name = "STARPU_MATRIX_INTERFACE"
+	.name = "STARPU_MATRIX_INTERFACE",
+	.pack_meta = NULL,
+	.unpack_meta = NULL
 };
 
 static void matrix_init(void *data_interface)
