@@ -90,6 +90,9 @@ New features:
   * Set STARPU_WORKERS_GETBIND to 1 by default, to inherit CPU binding from
     the job scheduler.
   * Add starpu_{vector,matrix,block,tensor,ndim}_filter_pick_variable.
+  * New operator for data interfaces pack_meta() and unpack_meta()
+    which are used in master slave mode for data interfaces with a
+    dynamic content.
 
 Small features:
   * New function starpu_mpi_comm_register() to store the size and the
